class SchemaDto {
  int id;
  String name;
  String jsonSchema;

  SchemaDto({
    required this.id,
    required this.name,
    required this.jsonSchema,
  });
}